--- a/ios/Config.xcconfig
+++ b/ios/Config.xcconfig
@@ -2,7 +2,8 @@
 //  Config.xcconfig
 //  HiHomeSeller
 //
-//  Created by Sohrab Hussain on 10/9/20.
+//  Created by Sohrab Hussain on 9/28/20.
+//  Copyright © 2020 Facebook. All rights reserved.
 //
 
 // Configuration settings file format documentation can be found at:
