--- a/ios/tmp.xcconfig
+++ b/ios/tmp.xcconfig
@@ -1,1 +1,5 @@
-
+DISPLAY_NAME=SellerDev
+BUNDLE_IDENTIFIER=com.hihome.seller.dev
+CODE_PUSH_KEY=NmbqpVKflleqvd3AGiGAyvImLeT25tDPJhIsH
+APP_ENV=dev
+APP_VERSION=1.0
