--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -191,6 +191,7 @@ android {
 dependencies {
     implementation project(':react-native-linear-gradient')
     implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation project(':react-native-maps')
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
