--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "react-native-image-picker": "^2.3.1",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-maps": "^0.27.1",
     "react-native-modal": "^11.5.6",
     "react-native-onesignal": "^3.9.0",
     "react-native-pdf": "^6.2.1",
@@ -70,8 +72,7 @@
     "redux-persist-filesystem-storage": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
-    "styled-components": "^5.2.0",
-    "react-native-linear-gradient": "^2.5.6"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
