--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "ios:clean": "rimraf ios/build && mkdir -p ios/build",
     "ios:iphonese": "react-native run-ios --simulator \"iPhone SE (2nd generation)\"",
     "android:codepush": "code-push release-react HiHome-Restaurant-1 android ",
+    "android:codepush:live": "code-push release-react HiHome-Restaurant-1 android -d Production -t '*'",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
     "android:clean": "rimraf android/build && rimraf android/app/build",
     "android:bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
-    "android:assembleDebug": "./gradlew clean assembleDebug"
+    "android:assembleDebug": "./gradlew clean assembleDebug",
+    "android:assembleRelease": "./gradlew clean assembleRelease"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
@@ -39,7 +41,7 @@
     "react-native-date-picker": "^2.7.10",
     "react-native-device-info": "^5.6.3",
     "react-native-elements": "^1.2.7",
-    "react-native-fast-image": "8.3.2",
+    "react-native-fast-image": "8.3.0",
     "react-native-fbsdk": "^1.1.2",
     "react-native-flash-message": "^0.1.16",
     "react-native-geolocation-service": "^5.0.0",
