--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "echo \".env\" > /tmp/envfile && ENVFILE=.env && react-native run-ios --configuration Debug --scheme \"Seller-Dev\"",
     "ios:qa": "echo \".env.staging\" > /tmp/envfile && ENVFILE=.env.staging react-native run-ios --configuration Debug --scheme \"Seller-QA\"",
     "ios:live": "echo \".env.production\" > /tmp/envfile && ENVFILE=.env.production react-native run-ios --configuration Debug --scheme \"Seller\"",
-    "ios:codepush": "code-push release-react HiHome-Restaurant ios -t '*'",
+    "ios:codepush": "code-push release-react HiHome-Restaurant ios -t '1.0'",
     "ios:codepush:live": "code-push release-react HiHome-Restaurant ios -d Production -t '*'",
     "ios:clean": "rimraf ios/build && mkdir -p ios/build",
     "ios:iphonese": "react-native run-ios --simulator \"iPhone SE (2nd generation)\"",
@@ -41,7 +41,6 @@
     "react-native-date-picker": "^2.7.10",
     "react-native-device-info": "^5.6.3",
     "react-native-elements": "^1.2.7",
-    "react-native-fast-image": "8.3.0",
     "react-native-fbsdk": "^1.1.2",
     "react-native-flash-message": "^0.1.16",
     "react-native-geolocation-service": "^5.0.0",
