CodePush Android SetUp. Android SetUp for Play Store Release. Bug Fixes.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,7 +82,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
-
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
@@ -125,6 +125,9 @@ android {
     dexOptions {
        javaMaxHeapSize "4g"
     }
+    lintOptions {
+       checkReleaseBuilds false
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -158,6 +161,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('selleruploadkey.keystore')
+            storePassword 'Aziz@7615'
+            keyAlias 'sellerlivekey'
+            keyPassword 'Aziz@7615'
+        }
     }
     buildTypes {
         debug {
@@ -166,7 +175,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
