--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+project.ext {
+    excludeAppGlideModule = true
+    glideVersion = "4.9.0"
+}
 buildscript {
     ext {
         buildToolsVersion = "29.0.2"
