--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -4,3 +4,5 @@ project(':react-native-linear-gradient').projectDir = new File(rootProject.proje
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 include ':react-native-maps'
+include ':app', ':react-native-code-push'
+project(':react-native-code-push').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-code-push/android/app')
