change the staging apis link and code push commands

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "ios": "echo \".env\" > /tmp/envfile && ENVFILE=.env && react-native run-ios --configuration Debug --scheme \"Seller-Dev\"",
     "ios:qa": "echo \".env.staging\" > /tmp/envfile && ENVFILE=.env.staging react-native run-ios --configuration Debug --scheme \"Seller-QA\"",
     "ios:live": "echo \".env.production\" > /tmp/envfile && ENVFILE=.env.production react-native run-ios --configuration Debug --scheme \"Seller\"",
-    "ios:codepush": "code-push release-react HiHome-Restaurant ios -t '1.0'",
-    "ios:codepush:live": "code-push release-react HiHome-Restaurant ios -d Production -t '*'",
+    "ios:codepush": "appcenter codepush release-react -a sohrab.iosdev-gmail.com/HiHome-Restaurant -t '1.0'",
+    "ios:codepush:live": "appcenter codepush release-react -a sohrab.iosdev-gmail.com/HiHome-Restaurant -d Production -t '*'",
     "ios:clean": "rimraf ios/build && mkdir -p ios/build",
     "ios:iphonese": "react-native run-ios --simulator \"iPhone SE (2nd generation)\"",
     "android:codepush": "code-push release-react HiHome-Restaurant-1 android ",
