Google map implementation

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "ios:codepush:live": "appcenter codepush release-react -a sohrab.iosdev-gmail.com/HiHome-Restaurant -d Production -t '*'",
     "ios:clean": "rimraf ios/build && mkdir -p ios/build",
     "ios:iphonese": "react-native run-ios --simulator \"iPhone SE (2nd generation)\"",
-    "android:codepush": "code-push release-react HiHome-Restaurant-1 android ",
-    "android:codepush:live": "code-push release-react HiHome-Restaurant-1 android -d Production -t '*'",
+    "android:codepush": "appcenter codepush release-react -a sohrab.iosdev-gmail.com/HiHome-Restaurant-1 -t '2.0'",
+    "android:codepush:live": "appcenter codepush release-react -a sohrab.iosdev-gmail.com/HiHome-Restaurant-1 -d Production -t '*'",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
