--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,12 +33,18 @@ target 'HiHomeSeller' do
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
-  
+
   # add the Firebase pod for Google Analytics
   pod 'Firebase/Analytics'
   # add pods for any other desired Firebase products
-  # https://firebase.google.com/docs/ios/setup#available-pods
-  # pod 'react-native-geolocation', path: '../node_modules/@react-native-community/geolocation'
+
+  # react-native-maps dependencies
+  rn_maps_path = '../node_modules/react-native-maps'
+  pod 'react-native-maps', path: rn_maps_path
+  pod 'react-native-google-maps', path: rn_maps_path  # Uncomment this line if you want to support GoogleMaps on iOS
+  pod 'GoogleMaps'  # Uncomment this line if you want to support GoogleMaps on iOS
+  pod 'Google-Maps-iOS-Utils' # Uncomment this line if you want to support GoogleMaps on iOS
+
   use_native_modules!
 
   pod 'react-native-video', :path => '../node_modules/react-native-video'
@@ -46,4 +52,3 @@ target 'HiHomeSeller' do
   pod 'react-native-pdf', :path => '../node_modules/react-native-pdf'
 
 end
-
