--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ios:codepush:live": "appcenter codepush release-react -a sohrab.iosdev-gmail.com/HiHome-Restaurant -d Production -t '*'",
     "ios:clean": "rimraf ios/build && mkdir -p ios/build",
     "ios:iphonese": "react-native run-ios --simulator \"iPhone SE (2nd generation)\"",
+    "ios:setup": "cd ios && rimraf Pods && yarn install && pod install && mkdir -p build",
     "android:codepush": "appcenter codepush release-react -a sohrab.iosdev-gmail.com/HiHome-Restaurant-1 -t '2.0'",
     "android:codepush:live": "appcenter codepush release-react -a sohrab.iosdev-gmail.com/HiHome-Restaurant-1 -d Production -t '*'",
     "start": "react-native start",
@@ -32,7 +33,7 @@
     "@react-navigation/stack": "^5.0.8",
     "appcenter": "^3.0.1",
     "lottie-ios": "3.1.8",
-    "lottie-react-native": "^3.3.2",
+    "lottie-react-native": "3.5.0",
     "moment": "^2.29.1",
     "patch-package": "^6.2.2",
     "react": "16.9.0",
@@ -47,6 +48,7 @@
     "react-native-geolocation-service": "^5.0.0",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-i18n": "^2.0.15",
+    "react-native-image-crop-picker": "^0.36.0",
     "react-native-image-picker": "^3.3.2",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
