--- a/ios/Podfile
+++ b/ios/Podfile
@@ -52,3 +52,36 @@ target 'HiHomeSeller' do
   pod 'react-native-pdf', :path => '../node_modules/react-native-pdf'
 
 end
+
+pre_install do |installer|
+  puts("Image fix for ios14: remove this when upgradeing to >= 0.63.3")
+  find = "_currentFrame.CGImage;"
+  replace = "_currentFrame.CGImage ;} else { [super displayLayer:layer];"
+  op = `sed -ie "s/#{find}/#{replace}/" ../node_modules/react-native/Libraries/Image/RCTUIImageViewAnimated.m`
+  puts("Image fix for ios14 done")
+end
+
+post_install do |installer|
+ installer.pods_project.targets.each do |target|
+  target.build_configurations.each do |config|
+   config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '9.0'
+  end
+ end
+ find_and_replace("../node_modules/react-native/React/CxxBridge/RCTCxxBridge.mm",
+     "_initializeModules:(NSArray<id<RCTBridgeModule>> *)modules", "_initializeModules:(NSArray<Class> *)modules")
+     find_and_replace("../node_modules/react-native/ReactCommon/turbomodule/core/platform/ios/RCTTurboModuleManager.mm",
+       "RCTBridgeModuleNameForClass(module))", "RCTBridgeModuleNameForClass([module class]))")
+end
+
+def find_and_replace(dir, findstr, replacestr)
+  Dir[dir].each do |name|
+      text = File.read(name)
+      replace = text.gsub(findstr,replacestr)
+      if text != replace
+          puts "Fix: " + name
+          File.open(name, "w") { |file| file.puts replace }
+          STDOUT.flush
+      end
+  end
+  Dir[dir + '*/'].each(&method(:find_and_replace))
+end
