--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "patch-package": "^6.2.2",
     "react": "16.9.0",
     "react-native": "0.61.4",
-    "react-native-code-push": "^6.2.0",
+    "react-native-code-push": "6.0.0",
     "react-native-config": "^0.12.0",
     "react-native-date-picker": "^2.7.10",
     "react-native-device-info": "^5.6.3",
