--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "android:bundle": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
     "android:assembleDebug": "./gradlew clean assembleDebug",
     "android:assembleRelease": "./gradlew clean assembleRelease",
-    "android:bundleReleaseJsAndAssets": "./gradlew assembleRelease -x bundleReleaseJsAndAssets"
+    "android:bundleReleaseJsAndAssets": "./gradlew assembleRelease -x bundleReleaseJsAndAssets",
+    "bundle-android": "react-native bundle --entry-file index.js  --platform android --dev false --bundle-output ./android/app/src/main/assets/index.android.bundle --assets-dest ./android/app/src/main/res"
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
